@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ===========================================================================
+10/13/17: Fixed crash with early return from 9/17 changes.
+
 10/11/17: Fixed method of looking up mag index from a mag value, which fixes
 problems in removing IS and stage calibrations (In 3.6).
 
